--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
-/target
-.worktrees
+# ─────────────────────────────────────────────────────────────
+# Rust Build Artifacts
+# ─────────────────────────────────────────────────────────────
+target/
+*.rs.bk
+
+# ─────────────────────────────────────────────────────────────
+# IDE & Editor
+# ─────────────────────────────────────────────────────────────
+.idea/
+.vscode/
+.trae/
+*.swp
+*.swo
+*~
+
+# ─────────────────────────────────────────────────────────────
+# Operating System
+# ─────────────────────────────────────────────────────────────
+.DS_Store
+Thumbs.db
+
+# ─────────────────────────────────────────────────────────────
+# Tools & Cache
+# ─────────────────────────────────────────────────────────────
+.worktrees/
